--- a/src/main/java/org/pilirion/nakaza/components/page/user/Login.html
+++ b/src/main/java/org/pilirion/nakaza/components/page/user/Login.html
@@ -2,30 +2,7 @@
     <div class="left">
         <h1>Přihlášení</h1>
 
-
-        <div class="feedback">
-            Uživatel se zadaným jménem a heslem neexistuje.
-        </div>
-
-        <form>
-            <fieldset>
-                <div class="field">
-                    <div class="label">Zadejte své přihlašovací heslo: </div>
-                    <div class="input"><input type="text" id="login" name="login" value="email@email.cz" /></div>
-                    <div class="error"></div>
-                </div>
-
-                <div class="field">
-                    <div class="label">Zadejte své heslo: </div>
-                    <div class="input"><input type="password" id="password" name="password" value="heslo" /></div>
-                    <div class="error"></div>
-                </div>
-
-                <div class="field">
-                    <input type="button" value="Přihlásit">
-                </div>
-            </fieldset>
-        </form>
+        <div wicket:id="signIn"></div>
     </div>
 
     <div class="right">
