--- a/src/main/java/org/pilirion/nakaza/components/page/character/CreateCharacter.html
+++ b/src/main/java/org/pilirion/nakaza/components/page/character/CreateCharacter.html
@@ -1,46 +1,6 @@
 <wicket:extend xmlns:wicket="http://wicket.apache.org">
     <div class="left">
-        <h1>Tvorba nové postavy</h1>
-
-        <form>
-            <fieldset>
-                <div class="field">
-                    <div class="label">Jméno postavy:</div>
-                    <div class="input"><input type="text" name="name" /></div>
-                    <div class="error">Jméno postavy nesmí být prázdné</div>
-                </div>
-
-                <div class="field">
-                    <div class="label">Věk postavy:</div>
-                    <div class="input"><input type="number" name="age" /></div>
-                    <div class="error">Věk postavy musí být neprázdný a větší než 10.</div>
-                </div>
-
-                <div class="field">
-                    <div class="label">Skupina postavy:</div>
-                    <div class="select">
-                        <select>
-                            <option>Přeživší</option>
-                            <option>Zombie</option>
-                            <option>Armáda</option>
-                        </select>
-                    </div>
-                    <div class="error"></div>
-                </div>
-
-                <div class="field">
-                    <div class="label">Krátký popis vaší postavy:</div>
-                    <div class="textarea">
-                        <textarea name="description">Sem napište krátký popis vaší postavy, jejího charakteru apod.</textarea>
-                    </div>
-                    <div class="error">Popis vaší postavy musí být neprázdný.</div>
-                </div>
-
-                <div class="field">
-                    <input type="button" value="Vytvořit">
-                </div>
-            </fieldset>
-        </form>
+        <div wicket:id="createOrUpdateLogged"></div>
     </div>
 
     <div class="right">
