--- a/src/main/java/org/pilirion/nakaza/components/page/BasePage.html
+++ b/src/main/java/org/pilirion/nakaza/components/page/BasePage.html
@@ -31,9 +31,10 @@
     <div class="menu">
         <div class="items">
             <span class="item"><a wicket:id="homePage">Domů</a></span>
-            <span class="item choosen"><a wicket:id="aboutGame">O hře</a></span>
+            <span class="item"><a wicket:id="aboutGame">O hře</a></span>
             <span class="item"><a wicket:id="aboutWorld">O světě</a></span>
-            <span class="item"><a wicket:id="createCharacter">Tvorba postavy</a></span>
+            <span class="item"><a wicket:id="characters">Postavy</a></span>
+            <span class="item"><a wicket:id="stories">Příběhy</a></span>
         </div>
     </div>
 
