--- a/src/main/java/org/pilirion/nakaza/components/page/statics/HomePage.html
+++ b/src/main/java/org/pilirion/nakaza/components/page/statics/HomePage.html
@@ -59,34 +59,8 @@
         <!-- Additional information about page -->
         <!-- At HomePage there is information about completed characters -->
         <!-- Last 5 inserted players -->
-        <div class="character">
-            <div class="avatar">
-                <a href="characterDetail.html">
-                    <img src="files/upload/hrac1.png" alt="characterAvatar"/>
-                </a>
-            </div>
-            <div class="about">
-                Quisque pulvinar nisi quis semper rhoncus. Fusce at diam mollis, facilisis justo ut, sodales lacus.
-                Maecenas enim dolor, sollicitudin eget consequat non, pulvinar non lorem. Pellentesque eget vehicula
-                orci. Mauris interdum sollicitudin turpis vitae iaculis. Cras est lorem, condimentum vitae ultricies
-                id, varius a odio. Nunc sodales augue consequat leo viverra, et pharetra mauris imperdiet. Sed ut
-                adipiscing neque. Duis vehicula malesuada enim. Aenean quis dapibus justo.
-            </div>
-        </div>
+        <div wicket:id="listShortChars">
 
-        <div class="character">
-            <div class="avatar">
-                <a href="characterDetail.html">
-                    <img src="files/upload/hrac1.png" alt="characterAvatar"/>
-                </a>
-            </div>
-            <div class="about">
-                Quisque pulvinar nisi quis semper rhoncus. Fusce at diam mollis, facilisis justo ut, sodales lacus.
-                Maecenas enim dolor, sollicitudin eget consequat non, pulvinar non lorem. Pellentesque eget vehicula
-                orci. Mauris interdum sollicitudin turpis vitae iaculis. Cras est lorem, condimentum vitae ultricies
-                id, varius a odio. Nunc sodales augue consequat leo viverra, et pharetra mauris imperdiet. Sed ut
-                adipiscing neque. Duis vehicula malesuada enim. Aenean quis dapibus justo.
-            </div>
         </div>
     </div>
 </wicket:extend>
