--- a/src/main/java/org/pilirion/nakaza/components/page/story/AdministerStories.html
+++ b/src/main/java/org/pilirion/nakaza/components/page/story/AdministerStories.html
@@ -2,29 +2,8 @@
     <div class="left">
         <h2>Soupis příběhů.</h2>
 
-        <div class="stories short">
-            <table>
-                <tr>
-                    <td><a href="storyDetailPrivate.html">Story number 1</a></td>
-                    <td><input type="button" value="Potvrdit" /></td>
-                    <td><input type="button" value="Smazat" /></td>
-                </tr>
-                <tr>
-                    <td><a href="storyDetailPrivate.html">Story number 2</a></td>
-                    <td><input type="button" value="Potvrdit" /></td>
-                    <td><input type="button" value="Smazat" /></td>
-                </tr>
-                <tr>
-                    <td><a href="storyDetailPrivate.html">Story number 3</a></td>
-                    <td><input type="button" value="Potvrdit" /></td>
-                    <td><input type="button" value="Smazat" /></td>
-                </tr>
-                <tr>
-                    <td><a href="storyDetailPrivate.html">Story number 4</a></td>
-                    <td><input type="button" value="Potvrdit" /></td>
-                    <td><input type="button" value="Smazat" /></td>
-                </tr>
-            </table>
+        <div class="stories short" wicket:id="stories">
+
         </div>
     </div>
 
