--- a/src/main/java/org/pilirion/nakaza/components/page/story/CreateStory.html
+++ b/src/main/java/org/pilirion/nakaza/components/page/story/CreateStory.html
@@ -1,124 +1,9 @@
 <wicket:extend xmlns:wicket="http://wicket.apache.org">
     <div class="left">
-        <h1>Vytvoření příběhu</h1>
-
-        <form>
-            <fieldset>
-                <div class="field">
-                    <div class="label">Název</div>
-                    <div class="input">
-                        <input type="text" name="name"/>
-                    </div>
-                    <div class="error">Jméno musí být zadané. Jméno musí být unikátní</div>
-                </div>
-
-                <div class="field">
-                    <div class="label">Veřejný popis</div>
-                    <div class="input">
-                        <textarea>Sem patří popis, který uvidí všichni</textarea>
-                    </div>
-                    <div class="error">Veřejný popis musí být zadaný</div>
-                </div>
-
-                <div class="field">
-                    <div class="label">Tajný popis</div>
-                    <div class="input">
-                        <textarea>Sem patří popis, který uvidí pouze ti, kdo si již příběh zadali.</textarea>
-                    </div>
-                    <div class="error"></div>
-                </div>
-
-                <h2>Štítky charakterizující tento příběh.</h2>
-
-                <div class="labels">
-                    <div class="required">
-                        <div>Povinné:</div>
-                        <input type="text" class="autoCompletable required" />
-                        <input type="text" class="autoCompletable required" />
-                        <input type="button" class="button add" value="Další"/>
-                    </div>
-                    <div class="optional">
-                        <div>Volitelné:</div>
-                        <input type="text" class="autoCompletable optional" />
-                        <input type="button" class="button add" value="Další"/>
-                    </div>
-                    <div class="error">
-                        Nezadali jste ani jeden požadovaný štítek
-                    </div>
-                </div>
-                <div class="clear"></div>
-
-                <h2>Účastníci příběhu</h2>
-
-                <div class="participant">
-                    <div class="field">
-                        <div class="label">Tajný popis</div>
-                        <div class="input">
-                            <textarea>Sem patří popis, který uvidí pouze ten, kdo se zapsal jako tato postava.</textarea>
-                        </div>
-                        <div class="error"></div>
-                    </div>
-
-                    <div class="field">
-                        <div class="label">Rasa</div>
-                        <div class="select">
-                            <select>
-                                <option>Přeživší</option>
-                                <option>Zombie</option>
-                                <option>Armáda</option>
-                            </select>
-                        </div>
-                        <div class="error"></div>
-                    </div>
-
-                    <!-- Každá role může mít nějaké štítky -->
-                    <div class="labels">
-                        <div class="required">
-                            <div>Povinné:</div>
-                            <input type="text" class="autoCompletable required" />
-                            <input type="text" class="autoCompletable required" />
-                            <input type="button" class="button add" value="Další" />
-                        </div>
-                        <div class="optional">
-                            <div>Volitelné:</div>
-                            <input type="text" class="autoCompletable optional" />
-                            <input type="button" class="button add" value="Další" />
-                        </div>
-                        <div class="error">
-                            Nezadali jste ani jeden požadovaný štítek
-                        </div>
-                    </div>
-                    <div class="clear"></div>
-                </div>
-
-                <div class="field">
-                    <input type="button" value="Uložit nový příběh">
-                </div>
-            </fieldset>
-        </form>
+        <div wicket:id="createStory"></div>
     </div>
 
     <div class="right">
-        <h2>Poslední přidané příběhy</h2>
-
-        <div class="story">
-            <span class="publicDescription"><a href="storyDetailPublic.html">Description of story</a></span>
-
-            <div class="labels">
-                <div class="label">Detektivní</div>
-                <div class="label">Akční</div>
-            </div>
-            <div class="clear"></div>
-        </div>
-
-        <div class="story">
-            <span class="publicDescription"><a href="storyDetailPublic.html">Description of story</a></span>
-
-            <div class="labels">
-                <div class="label">Detektivní</div>
-                <div class="label">Akční</div>
-            </div>
-            <div class="clear"></div>
-        </div>
+        <div wicket:id="lastAddedStories"></div>
     </div>
 </wicket:extend>
