--- a/src/main/java/org/pilirion/nakaza/components/page/css/BasePage.css
+++ b/src/main/java/org/pilirion/nakaza/components/page/css/BasePage.css
@@ -140,7 +140,7 @@ p {
 .menu .items {
     margin-left: auto;
     margin-right: auto;
-    width: 50%;
+    width: 70%;
 }
 
 .menu a {
@@ -254,4 +254,13 @@ table{
 .myStories {
     float:left;
     width: 49%;
+}
+
+.storyForm .field {
+    height: auto;
+    width: 100%;
+}
+
+.storyForm .field .input {
+    height: auto;
 }
