--- a/src/main/java/org/pilirion/nakaza/components/panel/story/CreateOrUpdateStory.html
+++ b/src/main/java/org/pilirion/nakaza/components/panel/story/CreateOrUpdateStory.html
@@ -1,9 +1,51 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title></title>
-</head>
-<body>
+<wicket:panel xmlns:wicket="http://wicket.apache.org">
+<h1>Vytvoření příběhu</h1>
 
-</body>
-</html>
+<form class="storyForm" wicket:id="createStory">
+    <fieldset>
+        <div class="field">
+            <div class="label">Název</div>
+            <div class="input">
+                <input type="text" name="name" wicket:id="name" />
+            </div>
+            <div class="error" wicket:id="nameFeedback"></div>
+        </div>
+        <div class="clear"></div>
+
+        <div class="field">
+            <div class="label">Veřejný popis</div>
+            <div class="input">
+                <textarea wicket:id="descriptionPublic">Sem patří popis, který uvidí všichni</textarea>
+            </div>
+            <div class="error" wicket:id="descriptionPublicFeedback"></div>
+        </div>
+        <div class="clear"></div>
+
+        <div class="field">
+            <div class="label">Tajný popis</div>
+            <div class="input">
+                <textarea wicket:id="descriptionPrivate">Sem patří popis, který uvidí pouze ti, kdo si již příběh zadali.</textarea>
+            </div>
+            <div class="error" wicket:id="descriptionPrivateFeedback"></div>
+        </div>
+        <div class="clear"></div>
+
+        <h2>Štítky charakterizující tento příběh.</h2>
+
+        <div class="labels" wicket:id="labels"></div>
+        <div class="clear"></div>
+
+        <h2>Účastníci příběhu</h2>
+
+        <div class="participants" wicket:id="participants">
+            <!-- Participants are solved in different panel. -->
+        </div>
+
+        <div class="clear"></div>
+
+        <div class="field">
+            <input type="submit" wicket:id="submit" value="Uložit nový příběh">
+        </div>
+    </fieldset>
+</form>
+</wicket:panel>
